2003-04-24  Steve Youngs  <youngs@xemacs.org>

	* XEmacs 21.5.12 "carrot" is released.

2003-04-24  Matthew O. Persico  <persicom@acedsl.com>

        * unicode.c: Removed trailing commas in some enums; older
        (Solaris 2.7 cc) compiler produced volumous warnings.

        * text.c: Replaced char initialization of static Ibyte
        strcasecmp_charmap[] with octal numeric init. Apparently older
        (Solaris 2.7 cc) compiler treats quoted octals as signed,
        causing 256 signed-assigned-to-unsigned warnings.

        * lrecord.h: Removed trailing commas in some enums; older
        (Solaris 2.7 cc) compiler produced volumous warnings.

        * lisp.h: Removed trailing commas in some enums; older
        (Solaris 2.7 cc) compiler produced volumous warnings.

        * frame.c:  Removed trailing commas in some enums; older
        (Solaris 2.7 cc) compiler produced volumous warnings.

        * file-coding.h: Removed trailing commas in some enums; older
        (Solaris 2.7 cc) compiler produced volumous warnings.

2003-04-17  Stephen J. Turnbull  <stephen@xemacs.org>

	Fix stale match data after failed search bug.

	* search.c (search_buffer):
	Don't find null string if repetition count is 0.
	(string_match_1): 
	(looking_at_1): 
	(search_buffer): 
	(simple_search):
	(boyer_moore):
	Clear all search regs as start, not unused ones on success.
	* regex.c (re_match_2_internal): Fix comment about clearing regs.

	* search.c (Freplace_match): Document error conditions in docstring.
	(These actually error now after a failed match.)

2003-04-16  Chris Palmer  <chris@nodewarrior.org>

	* sysdll.c (dll_open): Removed Objective C-ism to fix Mac build.

2003-04-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* menubar-gtk.c (gtk_xemacs_menubar_class_init):
	(gtk_xemacs_menubar_init):
	(gtk_xemacs_menubar_size_request):
	(menu_descriptor_to_widget_1):
	(menu_descriptor_to_widget):
	(popdown_menu_cb):
	(reinit_vars_of_menubar_gtk):