@@ -1,3 +1,8 @@
+2003-05-02  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* config.h.in (HAVE_INTPTR_T_IN_SYS_TYPES_H): New.
+	lisp.h (intptr_t): Use it.
+
 2003-04-24  Steve Youngs  <youngs@xemacs.org>
 
 	* XEmacs 21.5.12 "carrot" is released.
